tensorflow/1.10/api_docs/python/tf/math.md
<div itemscope itemtype="http://developers.google.com/ReferenceObject">
<meta itemprop="name" content="tf.math" />
</div>

# Module: tf.math



Defined in [`tensorflow/math/__init__.py`](https://www.tensorflow.org/code/tensorflow/math/__init__.py).

Basic arithmetic operators.

See the <a href="../../../api_guides/python/math_ops.md">Math</a> guide.

## Functions

[`acos(...)`](../tf/acos.md): Computes acos of x element-wise.

[`acosh(...)`](../tf/acosh.md): Computes inverse hyperbolic cosine of x element-wise.

[`add(...)`](../tf/add.md): Returns x + y element-wise.

[`asin(...)`](../tf/asin.md): Computes asin of x element-wise.

[`asinh(...)`](../tf/asinh.md): Computes inverse hyperbolic sine of x element-wise.

[`atan(...)`](../tf/atan.md): Computes atan of x element-wise.

[`atan2(...)`](../tf/atan2.md): Computes arctangent of `y/x` element-wise, respecting signs of the arguments.

[`atanh(...)`](../tf/atanh.md): Computes inverse hyperbolic tangent of x element-wise.

[`bessel_i0(...)`](../tf/math/bessel_i0.md): Computes the Bessel i0 function of `x` element-wise.

[`bessel_i0e(...)`](../tf/math/bessel_i0e.md): Computes the Bessel i0e function of `x` element-wise.

[`bessel_i1(...)`](../tf/math/bessel_i1.md): Computes the Bessel i1 function of `x` element-wise.

[`bessel_i1e(...)`](../tf/math/bessel_i1e.md): Computes the Bessel i1e function of `x` element-wise.

[`betainc(...)`](../tf/betainc.md): Compute the regularized incomplete beta integral \\(I_x(a, b)\\).

[`ceil(...)`](../tf/ceil.md): Returns element-wise smallest integer in not less than x.

[`cos(...)`](../tf/cos.md): Computes cos of x element-wise.

[`cosh(...)`](../tf/cosh.md): Computes hyperbolic cosine of x element-wise.

[`digamma(...)`](../tf/digamma.md): Computes Psi, the derivative of Lgamma (the log of the absolute value of

[`equal(...)`](../tf/equal.md): Returns the truth value of (x == y) element-wise.

[`erfc(...)`](../tf/erfc.md): Computes the complementary error function of `x` element-wise.

[`exp(...)`](../tf/exp.md): Computes exponential of x element-wise.  \\(y = e^x\\).

[`expm1(...)`](../tf/expm1.md): Computes exponential of x - 1 element-wise.

[`floor(...)`](../tf/floor.md): Returns element-wise largest integer not greater than x.

[`greater(...)`](../tf/greater.md): Returns the truth value of (x > y) element-wise.

[`greater_equal(...)`](../tf/greater_equal.md): Returns the truth value of (x >= y) element-wise.

[`igamma(...)`](../tf/igamma.md): Compute the lower regularized incomplete Gamma function `Q(a, x)`.

[`igammac(...)`](../tf/igammac.md): Compute the upper regularized incomplete Gamma function `Q(a, x)`.

[`invert_permutation(...)`](../tf/invert_permutation.md): Computes the inverse permutation of a tensor.

[`less(...)`](../tf/less.md): Returns the truth value of (x < y) element-wise.

[`less_equal(...)`](../tf/less_equal.md): Returns the truth value of (x <= y) element-wise.

[`lgamma(...)`](../tf/lgamma.md): Computes the log of the absolute value of `Gamma(x)` element-wise.

[`log(...)`](../tf/log.md): Computes natural logarithm of x element-wise.

[`log1p(...)`](../tf/log1p.md): Computes natural logarithm of (1 + x) element-wise.

[`logical_and(...)`](../tf/logical_and.md): Returns the truth value of x AND y element-wise.

[`logical_not(...)`](../tf/logical_not.md): Returns the truth value of NOT x element-wise.

[`logical_or(...)`](../tf/logical_or.md): Returns the truth value of x OR y element-wise.

[`maximum(...)`](../tf/maximum.md): Returns the max of x and y (i.e. x > y ? x : y) element-wise.

[`minimum(...)`](../tf/minimum.md): Returns the min of x and y (i.e. x < y ? x : y) element-wise.

[`not_equal(...)`](../tf/not_equal.md): Returns the truth value of (x != y) element-wise.

[`polygamma(...)`](../tf/polygamma.md): Compute the polygamma function \\(\psi^{(n)}(x)\\).

[`polyval(...)`](../tf/math/polyval.md): Computes the elementwise value of a polynomial.

[`reciprocal(...)`](../tf/reciprocal.md): Computes the reciprocal of x element-wise.

[`rint(...)`](../tf/rint.md): Returns element-wise integer closest to x.

[`rsqrt(...)`](../tf/rsqrt.md): Computes reciprocal of square root of x element-wise.

[`segment_max(...)`](../tf/segment_max.md): Computes the maximum along segments of a tensor.

[`segment_mean(...)`](../tf/segment_mean.md): Computes the mean along segments of a tensor.

[`segment_min(...)`](../tf/segment_min.md): Computes the minimum along segments of a tensor.

[`segment_prod(...)`](../tf/segment_prod.md): Computes the product along segments of a tensor.

[`segment_sum(...)`](../tf/segment_sum.md): Computes the sum along segments of a tensor.

[`sin(...)`](../tf/sin.md): Computes sin of x element-wise.

[`sinh(...)`](../tf/sinh.md): Computes hyperbolic sine of x element-wise.

[`softplus(...)`](../tf/math/softplus.md): Computes softplus: `log(exp(features) + 1)`.

[`softsign(...)`](../tf/math/softsign.md): Computes softsign: `features / (abs(features) + 1)`.

[`squared_difference(...)`](../tf/squared_difference.md): Returns (x - y)(x - y) element-wise.

[`tan(...)`](../tf/tan.md): Computes tan of x element-wise.

[`unsorted_segment_max(...)`](../tf/unsorted_segment_max.md): Computes the maximum along segments of a tensor.

[`unsorted_segment_min(...)`](../tf/unsorted_segment_min.md): Computes the minimum along segments of a tensor.

[`unsorted_segment_prod(...)`](../tf/unsorted_segment_prod.md): Computes the product along segments of a tensor.

[`unsorted_segment_sum(...)`](../tf/unsorted_segment_sum.md): Computes the sum along segments of a tensor.

[`zeta(...)`](../tf/zeta.md): Compute the Hurwitz zeta function \\(\zeta(x, q)\\).

